Create index.html with basic website layout
Added HTML structure and content for the website.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
-<html></html>
-<head></head>
-<body></body>
-Halo, kakak cantik
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome | My GitHub Pages</title>
+    <meta name="description" content="Website pribadi yang dibuat menggunakan GitHub Pages untuk berbagi informasi, karya, dan pengalaman.">
+</head>
+<body>
+
+    <h1>Selamat Datang di Website Saya</h1>
+
+    <p>
+        Website ini dibuat menggunakan <strong>GitHub Pages</strong> sebagai media untuk menampilkan
+        informasi, portofolio, dan berbagai hal yang ingin saya bagikan secara online.
+    </p>
+
+    <p>
+        Melalui halaman ini, saya ingin belajar, berkembang, dan mendokumentasikan perjalanan saya
+        di dunia teknologi dan kreativitas secara sederhana namun bermakna.
+    </p>
+
+    <p>
+        Terima kasih sudah berkunjung. Semoga website ini bermanfaat dan bisa menjadi inspirasi
+        bagi siapa pun yang membacanya.
+    </p>
+
+    <footer>
+        <p>&copy; 2025 | Dibuat dengan GitHub Pages</p>
+    </footer>
+
 </body>
 </html>
+
