Update title and structure of index.html

--- a/index.html
+++ b/index.html
@@ -3,27 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome | My GitHub Pages</title>
-    <meta name="description" content="Website pribadi yang dibuat menggunakan GitHub Pages untuk berbagi informasi, karya, dan pengalaman.">
+    <title>My GitHub Pages</title>
+
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-color: #f4f6f8;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #24292e;
+            color: white;
+            padding: 30px;
+            text-align: center;
+        }
+
+        section {
+            padding: 40px;
+            max-width: 800px;
+            margin: auto;
+            background-color: white;
+        }
+
+        h2 {
+            color: #24292e;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #eaeaea;
+            margin-top: 40px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
 
-    <h1>Selamat Datang di Website Saya</h1>
+    <header>
+        <h1>Selamat Datang di GitHub Pages Saya</h1>
+        <p>Website sederhana yang dibuat menggunakan GitHub Pages</p>
+    </header>
 
-    <p>
-        Website ini dibuat menggunakan <strong>GitHub Pages</strong> sebagai media untuk menampilkan
-        informasi, portofolio, dan berbagai hal yang ingin saya bagikan secara online.
-    </p>
+    <section>
+        <h2>Tentang Website</h2>
+        <p>
+            Website ini dibuat sebagai halaman statis menggunakan layanan GitHub Pages.
+            Halaman ini bertujuan untuk menampilkan informasi dasar, portofolio,
+            serta dokumentasi pembelajaran yang saya miliki.
+        </p>
 
-    <p>
-        Melalui halaman ini, saya ingin belajar, berkembang, dan mendokumentasikan perjalanan saya
-        di dunia teknologi dan kreativitas secara sederhana namun bermakna.
-    </p>
+        <h2>Tujuan</h2>
+        <p>
+            Melalui website ini, saya ingin belajar membuat website,
+            memahami penggunaan GitHub, dan membangun identitas digital secara sederhana.
+        </p>
 
-    <p>
-        Terima kasih sudah berkunjung. Semoga website ini bermanfaat dan bisa menjadi inspirasi
-        bagi siapa pun yang membacanya.
-    </p>
+        <h2>Kontak</h2>
+        <p>
+            Jika ingin mengenal saya lebih jauh, silakan kunjungi akun GitHub saya
+            atau hubungi melalui media sosial.
+        </p>
+    </section>
 
     <footer>
         <p>&copy; 2025 | Dibuat dengan GitHub Pages</p>
@@ -31,4 +74,3 @@
 
 </body>
 </html>
-
