--- a/index.html
+++ b/index.html
@@ -3,73 +3,139 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages</title>
+    <title>Implementasi GitHub Pages</title>
 
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f4f6f8;
+            font-family: "Segoe UI", Arial, sans-serif;
+            background-color: #eef2f7;
             margin: 0;
             padding: 0;
+            color: #1f2933;
         }
 
         header {
-            background-color: #24292e;
-            color: white;
-            padding: 30px;
+            background: linear-gradient(135deg, #1f2933, #374151);
+            color: #ffffff;
+            padding: 50px 20px;
             text-align: center;
+        }
+
+        header h1 {
+            margin-bottom: 10px;
+            font-size: 32px;
+        }
+
+        header p {
+            font-size: 18px;
+            opacity: 0.9;
+        }
+
+        main {
+            max-width: 1000px;
+            margin: 40px auto;
+            background-color: #ffffff;
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
         }
 
         section {
-            padding: 40px;
-            max-width: 800px;
-            margin: auto;
-            background-color: white;
+            margin-bottom: 40px;
         }
 
         h2 {
-            color: #24292e;
+            color: #111827;
+            border-left: 5px solid #3b82f6;
+            padding-left: 15px;
+            margin-bottom: 15px;
+        }
+
+        p {
+            text-align: justify;
+            font-size: 16px;
+        }
+
+        ul {
+            margin-left: 20px;
         }
 
         footer {
+            background-color: #e5e7eb;
+            padding: 25px;
             text-align: center;
-            padding: 20px;
-            background-color: #eaeaea;
-            margin-top: 40px;
             font-size: 14px;
+        }
+
+        footer strong {
+            color: #111827;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Selamat Datang di GitHub Pages Saya</h1>
-        <p>Website sederhana yang dibuat menggunakan GitHub Pages</p>
+        <h1>Implementasi GitHub Pages</h1>
+        <p>Website Statis sebagai Media Publikasi Digital</p>
     </header>
 
-    <section>
-        <h2>Tentang Website</h2>
-        <p>
-            Website ini dibuat sebagai halaman statis menggunakan layanan GitHub Pages.
-            Halaman ini bertujuan untuk menampilkan informasi dasar, portofolio,
-            serta dokumentasi pembelajaran yang saya miliki.
-        </p>
+    <main>
+        <section>
+            <h2>Pendahuluan</h2>
+            <p>
+                Perkembangan teknologi informasi mendorong pemanfaatan platform digital
+                sebagai sarana penyampaian informasi. GitHub Pages merupakan salah satu
+                layanan yang memungkinkan publikasi website statis secara efisien dan mudah.
+                Halaman ini dibuat sebagai bentuk implementasi dari konsep tersebut.
+            </p>
+        </section>
 
-        <h2>Tujuan</h2>
-        <p>
-            Melalui website ini, saya ingin belajar membuat website,
-            memahami penggunaan GitHub, dan membangun identitas digital secara sederhana.
-        </p>
+        <section>
+            <h2>Tujuan</h2>
+            <ul>
+                <li>Memahami konsep dasar website statis.</li>
+                <li>Mengimplementasikan HTML dan CSS dalam pengembangan halaman web.</li>
+                <li>Menggunakan GitHub Pages sebagai media publikasi daring.</li>
+                <li>Mengelola repository GitHub secara terstruktur.</li>
+            </ul>
+        </section>
 
-        <h2>Kontak</h2>
-        <p>
-            Jika ingin mengenal saya lebih jauh, silakan kunjungi akun GitHub saya
-            atau hubungi melalui media sosial.
-        </p>
-    </section>
+        <section>
+            <h2>Metode Pengembangan</h2>
+            <p>
+                Pengembangan website dilakukan menggunakan bahasa HTML dan CSS
+                dengan pendekatan statis. Proses publikasi dilakukan melalui
+                GitHub Pages dengan memanfaatkan repository GitHub sebagai
+                media penyimpanan dan penyebaran konten.
+            </p>
+        </section>
+
+        <section>
+            <h2>Hasil dan Pembahasan</h2>
+            <p>
+                Website yang dihasilkan berupa halaman statis yang dapat diakses
+                secara daring. Konten disusun secara sistematis dengan tampilan
+                yang sederhana, responsif, dan mudah dipahami oleh pengguna.
+            </p>
+        </section>
+
+        <section>
+            <h2>Kesimpulan</h2>
+            <p>
+                GitHub Pages dapat dimanfaatkan sebagai solusi publikasi website statis
+                yang efektif dan efisien. Platform ini mendukung pengembangan website
+                dengan struktur yang jelas serta kemudahan dalam proses deployment.
+            </p>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 | Dibuat dengan GitHub Pages</p>
+        <p>
+            <strong>Nama:</strong> Isi Nama <br>
+            <strong>Identitas:</strong> Isi NIM / ID <br>
+            <strong>Program Studi:</strong> Isi Prodi
+        </p>
+        <p>&copy; 2025</p>
     </footer>
 
 </body>
