--- a/index.html
+++ b/index.html
@@ -3,139 +3,174 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Implementasi GitHub Pages</title>
+    <title>GitHub Pages</title>
 
     <style>
         body {
-            font-family: "Segoe UI", Arial, sans-serif;
-            background-color: #eef2f7;
             margin: 0;
-            padding: 0;
-            color: #1f2933;
+            font-family: "Segoe UI", sans-serif;
+            background-color: #f8fafc;
+            color: #1e293b;
+            line-height: 1.7;
         }
 
         header {
-            background: linear-gradient(135deg, #1f2933, #374151);
-            color: #ffffff;
-            padding: 50px 20px;
+            min-height: 100vh;
+            background: linear-gradient(135deg, #2563eb, #1e40af);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             text-align: center;
+            padding: 40px 20px;
         }
 
         header h1 {
-            margin-bottom: 10px;
-            font-size: 32px;
+            font-size: 42px;
+            margin-bottom: 15px;
         }
 
         header p {
-            font-size: 18px;
-            opacity: 0.9;
+            font-size: 20px;
+            max-width: 700px;
+            margin: auto;
+            opacity: 0.95;
         }
 
         main {
             max-width: 1000px;
-            margin: 40px auto;
-            background-color: #ffffff;
-            padding: 50px;
-            border-radius: 10px;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            margin: auto;
+            padding: 80px 30px;
         }
 
         section {
-            margin-bottom: 40px;
+            margin-bottom: 80px;
         }
 
         h2 {
-            color: #111827;
-            border-left: 5px solid #3b82f6;
-            padding-left: 15px;
-            margin-bottom: 15px;
+            font-size: 28px;
+            margin-bottom: 20px;
+            position: relative;
+        }
+
+        h2::after {
+            content: "";
+            width: 60px;
+            height: 4px;
+            background-color: #2563eb;
+            position: absolute;
+            left: 0;
+            bottom: -8px;
         }
 
         p {
+            font-size: 17px;
             text-align: justify;
-            font-size: 16px;
         }
 
-        ul {
-            margin-left: 20px;
+        .card-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+            margin-top: 30px;
+        }
+
+        .card {
+            background-color: white;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
+            transition: transform 0.3s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-6px);
         }
 
         footer {
-            background-color: #e5e7eb;
-            padding: 25px;
+            background-color: #0f172a;
+            color: #cbd5f5;
             text-align: center;
+            padding: 30px 20px;
             font-size: 14px;
-        }
-
-        footer strong {
-            color: #111827;
         }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>Implementasi GitHub Pages</h1>
-        <p>Website Statis sebagai Media Publikasi Digital</p>
+        <div>
+            <h1>GitHub Pages</h1>
+            <p>
+                Platform sederhana untuk membangun dan mempublikasikan
+                website statis secara cepat, efisien, dan terstruktur.
+            </p>
+        </div>
     </header>
 
     <main>
         <section>
-            <h2>Pendahuluan</h2>
+            <h2>Tentang Halaman Ini</h2>
             <p>
-                Perkembangan teknologi informasi mendorong pemanfaatan platform digital
-                sebagai sarana penyampaian informasi. GitHub Pages merupakan salah satu
-                layanan yang memungkinkan publikasi website statis secara efisien dan mudah.
-                Halaman ini dibuat sebagai bentuk implementasi dari konsep tersebut.
+                Halaman ini dibuat menggunakan GitHub Pages sebagai media publikasi
+                website statis. Dengan pendekatan minimalis dan terstruktur,
+                halaman ini menampilkan informasi secara jelas, ringan,
+                dan mudah diakses melalui berbagai perangkat.
             </p>
         </section>
 
         <section>
-            <h2>Tujuan</h2>
-            <ul>
-                <li>Memahami konsep dasar website statis.</li>
-                <li>Mengimplementasikan HTML dan CSS dalam pengembangan halaman web.</li>
-                <li>Menggunakan GitHub Pages sebagai media publikasi daring.</li>
-                <li>Mengelola repository GitHub secara terstruktur.</li>
-            </ul>
+            <h2>Konsep Utama</h2>
+            <div class="card-container">
+                <div class="card">
+                    <h3>Sederhana</h3>
+                    <p>
+                        Menggunakan HTML dan CSS tanpa framework tambahan
+                        untuk menjaga performa dan kemudahan pengelolaan.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <h3>Responsif</h3>
+                    <p>
+                        Tata letak dirancang agar dapat menyesuaikan
+                        berbagai ukuran layar dengan nyaman.
+                    </p>
+                </div>
+
+                <div class="card">
+                    <h3>Terstruktur</h3>
+                    <p>
+                        Konten disusun secara sistematis agar mudah dipahami
+                        dan memiliki alur informasi yang jelas.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <section>
-            <h2>Metode Pengembangan</h2>
+            <h2>Manfaat Penggunaan</h2>
             <p>
-                Pengembangan website dilakukan menggunakan bahasa HTML dan CSS
-                dengan pendekatan statis. Proses publikasi dilakukan melalui
-                GitHub Pages dengan memanfaatkan repository GitHub sebagai
-                media penyimpanan dan penyebaran konten.
+                GitHub Pages memungkinkan publikasi website tanpa
+                memerlukan konfigurasi server yang kompleks.
+                Hal ini menjadikannya solusi efektif untuk dokumentasi,
+                presentasi informasi, maupun pengembangan web statis.
             </p>
         </section>
 
         <section>
-            <h2>Hasil dan Pembahasan</h2>
+            <h2>Penutup</h2>
             <p>
-                Website yang dihasilkan berupa halaman statis yang dapat diakses
-                secara daring. Konten disusun secara sistematis dengan tampilan
-                yang sederhana, responsif, dan mudah dipahami oleh pengguna.
-            </p>
-        </section>
-
-        <section>
-            <h2>Kesimpulan</h2>
-            <p>
-                GitHub Pages dapat dimanfaatkan sebagai solusi publikasi website statis
-                yang efektif dan efisien. Platform ini mendukung pengembangan website
-                dengan struktur yang jelas serta kemudahan dalam proses deployment.
+                Dengan memanfaatkan GitHub Pages, proses pembuatan dan
+                publikasi website dapat dilakukan secara efisien.
+                Platform ini mendukung pengembangan web yang bersih,
+                terorganisir, dan mudah diakses.
             </p>
         </section>
     </main>
 
     <footer>
-        <p>
-            <strong>Nama:</strong> Isi Nama <br>
-            <strong>Identitas:</strong> Isi NIM / ID <br>
-            <strong>Program Studi:</strong> Isi Prodi
-        </p>
-        <p>&copy; 2025</p>
+        <p>&copy; 2025 | GitHub Pages</p>
     </footer>
 
 </body>
