--- a/index.html
+++ b/index.html
@@ -6,93 +6,136 @@
     <title>GitHub Pages</title>
 
     <style>
-        body {
+        :root {
+            --primary: #111827;
+            --secondary: #475569;
+            --accent: #6366f1;
+            --bg: #f9fafb;
+        }
+
+        * {
+            box-sizing: border-box;
             margin: 0;
-            font-family: "Segoe UI", sans-serif;
-            background-color: #f8fafc;
-            color: #1e293b;
-            line-height: 1.7;
+            padding: 0;
+        }
+
+        body {
+            font-family: "Inter", "Segoe UI", sans-serif;
+            background-color: var(--bg);
+            color: var(--primary);
+            line-height: 1.8;
+            overflow-x: hidden;
+        }
+
+        /* ANIMASI DASAR */
+        @keyframes fadeUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         header {
             min-height: 100vh;
-            background: linear-gradient(135deg, #2563eb, #1e40af);
-            color: white;
             display: flex;
             align-items: center;
             justify-content: center;
             text-align: center;
             padding: 40px 20px;
+            animation: fadeUp 1.2s ease forwards;
         }
 
         header h1 {
-            font-size: 42px;
-            margin-bottom: 15px;
+            font-size: 48px;
+            font-weight: 600;
+            letter-spacing: -1px;
+            margin-bottom: 16px;
         }
 
         header p {
             font-size: 20px;
-            max-width: 700px;
+            color: var(--secondary);
+            max-width: 720px;
             margin: auto;
-            opacity: 0.95;
         }
 
         main {
-            max-width: 1000px;
+            max-width: 960px;
             margin: auto;
-            padding: 80px 30px;
+            padding: 100px 24px;
         }
 
         section {
-            margin-bottom: 80px;
+            margin-bottom: 120px;
+            opacity: 0;
+            animation: fadeUp 1s ease forwards;
+            animation-delay: 0.3s;
         }
+
+        section:nth-child(2) { animation-delay: 0.5s; }
+        section:nth-child(3) { animation-delay: 0.7s; }
+        section:nth-child(4) { animation-delay: 0.9s; }
 
         h2 {
             font-size: 28px;
-            margin-bottom: 20px;
+            font-weight: 500;
+            margin-bottom: 24px;
             position: relative;
         }
 
         h2::after {
             content: "";
-            width: 60px;
-            height: 4px;
-            background-color: #2563eb;
+            width: 40px;
+            height: 2px;
+            background-color: var(--accent);
             position: absolute;
             left: 0;
-            bottom: -8px;
+            bottom: -10px;
         }
 
         p {
             font-size: 17px;
+            color: var(--secondary);
             text-align: justify;
         }
 
-        .card-container {
+        .features {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 25px;
-            margin-top: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+            gap: 32px;
+            margin-top: 40px;
         }
 
-        .card {
-            background-color: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.08);
-            transition: transform 0.3s ease;
+        .feature {
+            padding: 32px;
+            background-color: #ffffff;
+            border-radius: 16px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
         }
 
-        .card:hover {
-            transform: translateY(-6px);
+        .feature:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 20px 45px rgba(0, 0, 0, 0.08);
+        }
+
+        .feature h3 {
+            margin-bottom: 12px;
+            font-size: 20px;
+            font-weight: 500;
+            color: var(--primary);
         }
 
         footer {
-            background-color: #0f172a;
-            color: #cbd5f5;
             text-align: center;
-            padding: 30px 20px;
+            padding: 50px 20px;
             font-size: 14px;
+            color: #64748b;
+            border-top: 1px solid #e5e7eb;
         }
     </style>
 </head>
@@ -102,75 +145,71 @@
         <div>
             <h1>GitHub Pages</h1>
             <p>
-                Platform sederhana untuk membangun dan mempublikasikan
-                website statis secara cepat, efisien, dan terstruktur.
+                Platform sederhana untuk membangun website statis
+                dengan pendekatan minimalis, modern, dan efisien.
             </p>
         </div>
     </header>
 
     <main>
         <section>
-            <h2>Tentang Halaman Ini</h2>
+            <h2>Tentang Halaman</h2>
             <p>
-                Halaman ini dibuat menggunakan GitHub Pages sebagai media publikasi
-                website statis. Dengan pendekatan minimalis dan terstruktur,
-                halaman ini menampilkan informasi secara jelas, ringan,
-                dan mudah diakses melalui berbagai perangkat.
+                Halaman ini dirancang dengan prinsip kesederhanaan dan kejelasan visual.
+                Setiap elemen disusun secara terstruktur untuk menciptakan pengalaman
+                membaca yang nyaman, ringan, dan fokus pada konten.
             </p>
         </section>
 
         <section>
-            <h2>Konsep Utama</h2>
-            <div class="card-container">
-                <div class="card">
-                    <h3>Sederhana</h3>
+            <h2>Prinsip Desain</h2>
+            <div class="features">
+                <div class="feature">
+                    <h3>Minimal</h3>
                     <p>
-                        Menggunakan HTML dan CSS tanpa framework tambahan
-                        untuk menjaga performa dan kemudahan pengelolaan.
+                        Menghilangkan elemen yang tidak diperlukan
+                        untuk menjaga tampilan tetap bersih dan elegan.
                     </p>
                 </div>
-
-                <div class="card">
-                    <h3>Responsif</h3>
+                <div class="feature">
+                    <h3>Halus</h3>
                     <p>
-                        Tata letak dirancang agar dapat menyesuaikan
-                        berbagai ukuran layar dengan nyaman.
+                        Animasi ringan digunakan untuk memperkuat
+                        transisi tanpa mengganggu fokus pengguna.
                     </p>
                 </div>
-
-                <div class="card">
-                    <h3>Terstruktur</h3>
+                <div class="feature">
+                    <h3>Modern</h3>
                     <p>
-                        Konten disusun secara sistematis agar mudah dipahami
-                        dan memiliki alur informasi yang jelas.
+                        Tata letak dan tipografi disesuaikan
+                        dengan standar desain web masa kini.
                     </p>
                 </div>
             </div>
         </section>
 
         <section>
-            <h2>Manfaat Penggunaan</h2>
+            <h2>Manfaat</h2>
             <p>
-                GitHub Pages memungkinkan publikasi website tanpa
-                memerlukan konfigurasi server yang kompleks.
-                Hal ini menjadikannya solusi efektif untuk dokumentasi,
-                presentasi informasi, maupun pengembangan web statis.
+                GitHub Pages memungkinkan publikasi website statis
+                secara cepat tanpa konfigurasi kompleks.
+                Hal ini menjadikannya solusi ideal untuk
+                dokumentasi, presentasi, dan eksperimen desain web.
             </p>
         </section>
 
         <section>
             <h2>Penutup</h2>
             <p>
-                Dengan memanfaatkan GitHub Pages, proses pembuatan dan
-                publikasi website dapat dilakukan secara efisien.
-                Platform ini mendukung pengembangan web yang bersih,
-                terorganisir, dan mudah diakses.
+                Pendekatan minimalis tidak hanya menciptakan
+                tampilan yang menarik, tetapi juga meningkatkan
+                keterbacaan dan performa halaman secara keseluruhan.
             </p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 | GitHub Pages</p>
+        <p>&copy; 2025 GitHub Pages</p>
     </footer>
 
 </body>
